crates/cli/tests/snapshots/snapshot_tests__markdown_single_unused_file.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
## Plow: 1 issue found

### Unused files (1)

- `src/dead.ts`
