crates/cli/tests/snapshots/snapshot_tests__markdown_type_only_deps_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
## Plow: 1 issue found

### Type-only dependencies (consider moving to devDependencies) (1)

- `zod`
