crates/cli/tests/snapshots/snapshot_tests__markdown_unlisted_deps_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
## Plow: 1 issue found

### Unlisted dependencies (1)

- `chalk`
