crates/cli/tests/snapshots/snapshot_tests__markdown_unresolved_imports_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
## Plow: 1 issue found

### Unresolved imports (1)

- `src/app.ts`
  - :3 `./missing-module`
