crates/cli/tests/snapshots/snapshot_tests__markdown_unused_class_members_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
## Plow: 1 issue found

### Unused class members (1)

- `src/service.ts`
  - :42 `UserService.legacyMethod`
