crates/cli/tests/snapshots/snapshot_tests__markdown_unused_enum_members_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
## Plow: 1 issue found

### Unused enum members (1)

- `src/enums.ts`
  - :8 `Status.Deprecated`
