crates/cli/tests/snapshots/snapshot_tests__markdown_unused_exports_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
## Plow: 2 issues found

### Unused exports (2)

- `src/utils.ts`
  - :10 `helperFn`
  - :25 `formatDate`
