crates/cli/tests/snapshots/snapshot_tests__markdown_unused_types_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
## Plow: 1 issue found

### Unused type exports (1)

- `src/types.ts`
  - :5 `OldType`
