crates/cli/tests/snapshots/snapshot_tests__markdown_workspace_deps.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
## Plow: 1 issue found

### Unused dependencies (1)

- `lodash` (packages/ui/package.json)
